--- a/GloomeClasses/GloomeClasses/assets/game/lang/en.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/en.json
@@ -182,7 +182,7 @@
 	"traitdesc-packmule": "Exclusive craftable <a href=\"handbooksearch://peddler's pack\">peddler's pack</a>",
 	"traitdesc-specialstock": "Able to access an exclusive shop for each trader",
 	"traitdesc-silvertongue": "Cheaper prices for every trader",
-	"traitdesc-masquemonger": "Able to craft any mask",
+	"traitdesc-masquemonger": "Each mask holds a story... some happy, some sad. All of them worth wearing; at least once. (able to craft all masks in the game)",
 	"traitdesc-prospector": "Exclusive craftable <a href=\"handbooksearch://prospector's pack\">prospector's pack</a>, <a href=\"handbooksearch://tool kit\">toolkits</a>, <a href=\"handbooksearch://mining lantern\">mining lanterns</a>, <a href=\"handbooksearch://copper pan\">copper pan</a>, cheaper <a href=\"handbooksearch://blasting powder\">blasting powder</a> recipes, and cheaper <a href=\"handbooksearch://bomb\">bomb</a> recipes",
 	"traitdesc-shelteredstone": "No temporal stability loss whilst underground, no matter how deep.",
 	"traitdesc-mystic": "Exclusive craftable <a href=\"handbooksearch://crystal skull\">crystal skull</a>, craftable <a href=\"handbooksearch://prima materia\">prima materia</a>, and cheaper recipes for <a href=\"handbooksearch://parchment\">parchment</a>, and <a href=\"handbooksearch://pulp\">linen fiber pulp</a>",
