lang changes, modinfo fixes
Russian translation addition, Ukranian translation edits, mod version tweaked, game dependency changed to 1.21

--- a/GloomeClasses/GloomeClasses/assets/game/lang/uk.json
+++ b/GloomeClasses/GloomeClasses/assets/game/lang/uk.json
@@ -77,7 +77,7 @@
 	"trait-rugged": "<font color=\"#84ff84\">• Міцний </font>",
 	"trait-defender": "<font color=\"#84ff84\">• Захисник </font>",
 	"trait-mason": "<font color=\"#84ff84\">• Муляр </font>",
-	"trait-packmule": "<font color=\"#84ff84\">• ВитривалийВ'ючний мул </font>",
+	"trait-packmule": "<font color=\"#84ff84\">• Витривалий В'ючний мул </font>",
 	"trait-specialstock": "<font color=\"#84ff84\">• Особлива пропозиція </font>",
 	"trait-silvertongue": "<font color=\"#84ff84\">• Срібний язик </font>",
 	"trait-prospector": "<font color=\"#84ff84\">• Старатель </font>",
@@ -147,7 +147,7 @@
 	"traitname-rugged": "Міцний",
 	"traitname-defender": "Захисник",
 	"traitname-mason": "Муляр",
-	"traitname-packmule": "ВитривалийВ'ючний мул",
+	"traitname-packmule": "Витривалий В'ючний мул",
 	"traitname-specialstock": "Особлива пропозиція",
 	"traitname-silvertongue": "Срібний язик",
 	"traitname-prospector": "Старатель",
@@ -169,28 +169,28 @@
 	"traitname-fibrousfolly": "Волокниста мудрість",
 	"traitname-zealot": "Послідовник",
 
-	"traitdesc-temporaltransmutation": "Має здатність створювати <a href=\"handbooksearch://temporal gear\">часопросторові шестерні</a>, <a href=\"handbooksearch://saltpeter\">селітру</a>, та <a href=\"handbooksearch://high fertility soil\">ґрунт високої родючісті</a>через ексклюзивний рецепт <a href=\"handbooksearch://temporal transmutation\">бочки</a>. Також може створювати <a href=\"handbooksearch://prima materia\">первинну матерію</a>",
-	"traitdesc-artisan": "Ексклюзивний рецепт <a href=\"handbooksearch://wallpaper \">шпалерів</a>, може глазурувати <a href=\"handbooksearch://Raw storage vessel\">сирі посудини для зберігання</a>, <a href=\"handbooksearch://Raw flowerpot\">сирі вази для квітів</a>, <a href=\"handbooksearch://Raw planter\">сирі вазони</a>, та має дешевші рецепти для <a href=\"handbooksearch://red clay or blue clay or fire clay\">глини</a>. Також може виготовляти <a href=\"handbooksearch://refurbished\">покращений горщик</a>",
-	"traitdesc-bowyer": "Ексклюзивний рецепт <a href=\"handbooksearch://crude bow or crude arrow or recurve bow \">лука та стріл</a>, та <a href=\"handbooksearch://quiver\">сагайдака</a>",
-	"traitdesc-culinary": "Ексклюзивні рецепти <a href=\"handbooksearch://vintage beef\">витриманої яловичини</a>, та <a href=\"handbooksearch://cooking pot\">металевих каструль</a>",
-	"traitdesc-shelflifesavant": "Ексклюзивні рецепти <a href=\"handbooksearch://rosin\">каніфолі</a> яка подвоює термін зберігання продуктів, запакованих у <a href=\"handbooksearch://refurbished\">покращений горщик</a>",
-	"traitdesc-tinkerer": "Ексклюзивні рецепти <a href=\"handbooksearch://tuning spear\">пристрій</a> для приборкання сарани, <a href=\"handbooksearch://metal parts\">металеві деталі</a>, кращі рецепти для <a href=\"handbooksearch://chute\">жолобів</a>, <a href=\"handbooksearch://archimedes\">архимедового гвинта</a>, <a href=\"handbooksearch://hopper\">бункера</a>, <a href=\"handbooksearch://axle\">валів</a>, та <a href=\"handbooksearch://angled gear\">кутових шестерень</a>",
-	"traitdesc-locustlover": "+50% до здоров'я підкореної сарани, а також здатність лікувати підкорену сарану за допомогою  <a href=\"handbooksearch://metal parts\">металевих деталей</a>",
-	"traitdesc-pioneer": "Ексклюзивні рецепти <a href=\"handbooksearch://booster\">підсилювачу ґрунту</a>, <a href=\"handbooksearch://seed\">насіння</a>, і кращий рецепт <a href=\"handbooksearch://terra preta\">чорнозему</a>",
-	"traitdesc-carpenter": "Ексклюзивні рецепти <a href=\"handbooksearch://wagon\">колеса кибитки</a>, <a href=\"handbooksearch://paper lantern\">паперових ліхтарів</a>, <a href=\"handbooksearch://aged firewood\">стародавніх дрів</a>, <a href=\"handbooksearch://aged log\">стародванього дерева</a>, <a href=\"handbooksearch://owl treasure chest or golden treasure chest\">скрині для скарбів</a>, та кращі рецепти <a href=\"handbooksearch://stick\">палок</a>, <a href=\"handbooksearch://firewood\">дрів</a>, та <a href=\"handbooksearch://board\">дошок</a>",
-	"traitdesc-mason": "Ексклюзивні рецепти <a href=\"handbooksearch://advanced bloomery\">удосконаленої сиродутної пічі</a>, <a href=\"handbooksearch://hardened\">затверділої глини</a>, дешевший рецепт <a href=\"handbooksearch://plaster (plain)\">тинку</a>, <a href=\"handbooksearch://mortar\">розчину</a>, <a href=\"handbooksearch://raw blue clay brick or raw red clay brick or raw fire clay brick\">сирої глиняної цегли</a>, та <a href=\"handbooksearch://unfired\">сирої вогнетривкої цегли</a>",
-	"traitdesc-packmule": "Ексклюзивний рецепт <a href=\"handbooksearch://peddler's pack\">наплічника торговця</a>",
+	"traitdesc-temporaltransmutation": "Має здатність створювати <a href=\"handbooksearch://часопросторова шестерня\">часопросторові шестерні</a>, <a href=\"handbooksearch://селітра\">селітру</a>, та <a href=\"handbooksearch://ґрунт високої родючості\">ґрунт високої родючості</a>через ексклюзивний рецепт <a href=\"handbooksearch://часопросторова трансмутація\">часопросторової трансмутації</a>. Також може створювати <a href=\"handbooksearch://первинна матерія\">первинну матерію</a>",
+	"traitdesc-artisan": "Ексклюзивний рецепт <a href=\"handbooksearch://шпалери\">шпалерів</a>, може глазурувати <a href=\"handbooksearch://сира посудина для зберігання\">сирі посудини для зберігання</a>, <a href=\"handbooksearch://сира ваза для квітів\">сирі вази для квітів</a>, <a href=\"handbooksearch://сирий вазон\">сирі вазони</a>, та має дешевші рецепти для <a href=\"handbooksearch://глина\">глини</a>. Також може виготовляти <a href=\"handbooksearch://покращений горщик\">покращений горщик</a>",
+	"traitdesc-bowyer": "Ексклюзивний рецепт <a href=\"handbooksearch://лук\">лука</a>і<a href=\"handbooksearch://стріла\">стріл</a>, та <a href=\"handbooksearch://сагайдак\">сагайдака</a>",
+	"traitdesc-culinary": "Ексклюзивні рецепти <a href=\"handbooksearch://витримана яловичина\">витриманої яловичини</a>, та <a href=\"handbooksearch://каструля\">металевих каструль</a>",
+	"traitdesc-shelflifesavant": "Ексклюзивні рецепти <a href=\"handbooksearch://каніфоль\">каніфолі</a> яка подвоює термін зберігання продуктів, запакованих у <a href=\"handbooksearch://покращений горщик\">покращений горщик</a>",
+	"traitdesc-tinkerer": "Ексклюзивні рецепти <a href=\"handbooksearch://спис для злому\">пристрій</a> для приборкання сарани, <a href=\"handbooksearch://металеві деталі\">металеві деталі</a>, кращі рецепти для <a href=\"handbooksearch://жолоб\">жолобів</a>, <a href=\"handbooksearch://гвинт Архімеда\">Архімедового гвинта</a>, <a href=\"handbooksearch://бункер\">бункера</a>, <a href=\"handbooksearch://дерев'яний вал\">валів</a>, та <a href=\"handbooksearch://кутові шестерні\">кутових шестерень</a>",
+	"traitdesc-locustlover": "+50% до здоров'я підкореної сарани, а також здатність лікувати підкорену сарану за допомогою  <a href=\"handbooksearch://металеві деталі\">металевих деталей</a>",
+	"traitdesc-pioneer": "Ексклюзивні рецепти <a href=\"handbooksearch://підсилювач ґрунту\">підсилювачу ґрунту</a>, <a href=\"handbooksearch://насіння\">насіння</a>, і кращий рецепт <a href=\"handbooksearch://чорнозем\">чорнозему</a>",
+	"traitdesc-carpenter": "Ексклюзивні рецепти <a href=\"handbooksearch://колесо кибитки\">колеса кибитки</a>, <a href=\"handbooksearch://паперовий ліхтар\">паперових ліхтарів</a>, <a href=\"handbooksearch://стародавні дрова\">стародавніх дрів</a>, <a href=\"handbooksearch://колода стародавнього дерева\">стародванього дерева</a>, <a href=\"handbooksearch://скриня для скарбів\">скрині для скарбів</a>, та кращі рецепти <a href=\"handbooksearch://палиця\">палок</a>, <a href=\"handbooksearch://дрова\">дрів</a>, та <a href=\"handbooksearch://дошка\">дошок</a>",
+	"traitdesc-mason": "Ексклюзивні рецепти <a href=\"handbooksearch://удосконалена основа сиродутного горна\">удосконаленої сиродутної пічі</a>, <a href=\"handbooksearch://затверділа\">затверділої глини</a>, дешевший рецепт <a href=\"handbooksearch://тиньк\">тинку</a>, <a href=\"handbooksearch://розчин для мурування\">розчину</a>, <a href=\"handbooksearch://цеглина\">сирої глиняної цегли</a>, та <a href=\"handbooksearch://сира вогнетривка цеглина\">сирої вогнетривкої цегли</a>",
+	"traitdesc-packmule": "Ексклюзивний рецепт <a href=\"handbooksearch://наплічник торговця\">наплічника торговця</a>",
 	"traitdesc-specialstock": "Доступу до ексклюзивного магазину для кожного трейдера",
 	"traitdesc-silvertongue": "Більш вигідні ціни для кожного торговця",
 	"traitdesc-masquemonger": "Кожна маска має свою історію... деякі щасливі, деякі сумні. Всі вони варті того, щоб їх одягнути хоча б раз. (можна виготовити всі маски в грі)",
-	"traitdesc-prospector": "Ексклюзивні рецепти <a href=\"handbooksearch://prospector's pack\">мішка гірника</a>, <a href=\"handbooksearch://tool kit\">ремкомплекту</a>, <a href=\"handbooksearch://mining lantern\">шахтарських ліхтарів</a>, <a href=\"handbooksearch://copper pan\">мідного лотка</a>, дешевші рецепти <a href=\"handbooksearch://blasting powder\">пороху</a>, та <a href=\"handbooksearch://bomb\">бомб</a>",
+	"traitdesc-prospector": "Ексклюзивні рецепти <a href=\"handbooksearch://мішок гірника\">мішка гірника</a>, <a href=\"handbooksearch://ремкомплект\">ремкомплекту</a>, <a href=\"handbooksearch://шахтарський ліхтар\">шахтарських ліхтарів</a>, <a href=\"handbooksearch://лоток з міді\">мідного лотка</a>, дешевші рецепти <a href=\"handbooksearch://порох\">пороху</a>, та <a href=\"handbooksearch://бомба\">бомб</a>",
 	"traitdesc-shelteredstone": "Немає втрати тимчасової стабільності під землею, незалежно від глибини.",
-	"traitdesc-mystic": "Ексклюзивні рецепти <a href=\"handbooksearch://crystal skull\">кришталевого черепа</a>, <a href=\"handbooksearch://prima materia\">первинної матерії</a>, та дешевші рецепти для <a href=\"handbooksearch://parchment\">пергаменту</a>, та <a href=\"handbooksearch://pulp\">волокон стебел льону</a>",
-	"traitdesc-clairvoyance": "Можливість використовувати <a href=\"handbooksearch://crystal skull\">кришталевий череп</a> для пошуку пошкоджених транслокаторів",
-	"traitdesc-smith": "Ексклюзивні рецепти <a href=\"handbooksearch://armor kit\">ремкомплекту броні</a>, <a href=\"handbooksearch://metal barrel\">металевих бочок</a> для алхімії, <a href=\"handbooksearch://stainless steel mix\">суміш нержавіючої сталі</a> для використання в удосконаленій сиродутній печі",
-	"traitdesc-recycler": "Може розбивати <a href=\"handbooksearch://rusty gear\">іржаві шестерні</a>, <a href=\"handbooksearch://metal scraps\">брухт</a>, та <a href=\"handbooksearch://metal parts\">металеві деталі</a>",
-	"traitdesc-tallowtanner": "Можна переробити жировані шкури на <a href=\"handbooksearch://scraped hide\">вискоблені шкури</a>",
-	"traitdesc-zealot": "Ексклюзивні рецепти <a href=\"handbooksearch://temporal cloth\">часопросторової тканини</a>, <a href=\"handbooksearch://forlorn hope estoc\">Есток Приречених</a> і дешевший рецепт для <a href=\"handbooksearch://prima materia\">первинної матерії</a>",
+	"traitdesc-mystic": "Ексклюзивні рецепти <a href=\"handbooksearch://кришталевий череп\">кришталевого черепа</a>, <a href=\"handbooksearch://первинна матерія\">первинної матерії</a>, та дешевші рецепти для <a href=\"handbooksearch://пергамент\">пергаменту</a>, та <a href=\"handbooksearch://волокна стебел льону\">волокон стебел льону</a>",
+	"traitdesc-clairvoyance": "Можливість використовувати <a href=\"handbooksearch://кришталевий череп\">кришталевий череп</a> для пошуку пошкоджених транслокаторів",
+	"traitdesc-smith": "Ексклюзивні рецепти <a href=\"handbooksearch://ремкомплект броні\">ремкомплекту броні</a>, <a href=\"handbooksearch://металева бочка\">металевих бочок</a> для алхімії, <a href=\"handbooksearch://суміш нержавіючої сталі\">суміш нержавіючої сталі</a> для використання в удосконаленій сиродутній печі",
+	"traitdesc-recycler": "Може розбивати <a href=\"handbooksearch://іржава шестерня\">іржаві шестерні</a>, <a href=\"handbooksearch://брухт\">брухт</a>, та <a href=\"handbooksearch://металеві деталі\">металеві деталі</a>",
+	"traitdesc-tallowtanner": "Можна переробити жировані шкури на <a href=\"handbooksearch://вискоблена шкура\">вискоблені шкури</a>",
+	"traitdesc-zealot": "Ексклюзивні рецепти <a href=\"handbooksearch://часопросторова тканина\">часопросторової тканини</a>, <a href=\"handbooksearch://Есток Приречених\">Есток Приречених</a> і дешевший рецепт для <a href=\"handbooksearch://первинна матерія\">первинної матерії</a>",
 
 	"charattribute-flaxFiberChance-0.1": "+10% шанс отримати лляні волокна з трави",
 	"charattribute-flaxDropRate-0.2": "+20% більше волокон з льону",
